fix wrapping

--- a/packages/@adobe/spectrum-css-temp/components/tags/index.css
+++ b/packages/@adobe/spectrum-css-temp/components/tags/index.css
@@ -23,6 +23,7 @@ governing permissions and limitations under the License.
 .spectrum-Tags-container {
   /* Aligns tags with label. */
   margin-inline-start: calc(calc(var(--spectrum-taggroup-tag-gap-x) / 2) * -1);
+  margin-inline-end: calc(var(--spectrum-taggroup-tag-gap-x) / 2);
 }
 
 .spectrum-Tags-item {
